@@ -6,7 +6,7 @@ _builders = [('post-commit-powerpc-mac-os-x', StandardBuildFactory, ['apple-slav
              ('post-commit-pixel-powerpc-mac-os-x', PixelTestBuildFactory, ['apple-slave-3', 'apple-slave-4']),
              ('post-commit-win32', Win32BuildFactory, ['apple-slave-2']),
              ('periodic-powerpc-mac-os-x-no-svg', NoSVGBuildFactory, ['apple-slave-4', 'apple-slave-3']),
-             ('post-commit-linux-qt', QTBuildFactory, ['wildfox-slave-1']),
+             ('post-commit-linux-qt', QtBuildFactory, ['wildfox-slave-1']),
              ]
 
 def getBuilders():
