@@ -59,7 +59,9 @@ class Win32BuildFactory(BuildFactory):
         self.steps.append(s(JavaScriptCoreTest))
         self.steps.append(s(LayoutTest))
 
-class QTBuildFactory(BuildFactory):
+class QtBuildFactory(BuildFactory):
     def __init__(self):
         BuildFactory.__init__(self)
-        self.steps.append(s(CompileWebKitCMake))
+        self.steps.append(s(SetConfiguration, configuration="release"))
+        self.steps.append(s(CompileWebKit, configuration="release"))
+        self.steps.append(s(JavaScriptCoreTest))
